{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 10,
  "lineage": "a56c42e2-38f5-97c3-d572-9c1e5603c457",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec10929233384c7f",
            "arn": "arn:aws:ec2:us-east-1:423623870709:instance/i-02063dff68e31f73e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02063dff68e31f73e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "N_Virgnia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c644bb1c2fba083f"
              }
            ],
            "primary_network_interface_id": "eni-0c644bb1c2fba083f",
            "private_dns": "ip-10-1-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.201",
            "public_dns": "ec2-52-3-227-206.compute-1.amazonaws.com",
            "public_ip": "52.3.227.206",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed717ca5e138b88c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093fcc3a894c24c47",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Server-1",
              "Owner": "sai"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Server-1",
              "Owner": "sai"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6fd8c5274cd7ac3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623870709",
            "id": "i-02063dff68e31f73e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623870709:internet-gateway/igw-0bb16542e64f8f807",
            "id": "igw-0bb16542e64f8f807",
            "owner_id": "423623870709",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0f6a5a3c5d828f8fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623870709:route-table/rtb-08091c1b74054baf5",
            "id": "rtb-08091c1b74054baf5",
            "owner_id": "423623870709",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb16542e64f8f807",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-main"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6a5a3c5d828f8fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623870709",
            "id": "rtb-08091c1b74054baf5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f3dcc847454d459",
            "region": "us-east-1",
            "route_table_id": "rtb-08091c1b74054baf5",
            "subnet_id": "subnet-093fcc3a894c24c47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623870709:security-group/sg-0c6fd8c5274cd7ac3",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6fd8c5274cd7ac3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "423623870709",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6a5a3c5d828f8fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623870709",
            "id": "sg-0c6fd8c5274cd7ac3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623870709:subnet/subnet-093fcc3a894c24c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093fcc3a894c24c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623870709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform_Public_Subnet1-main"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet1-main"
            },
            "vpc_id": "vpc-0f6a5a3c5d828f8fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623870709",
            "id": "subnet-093fcc3a894c24c47",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623870709:vpc/vpc-0f6a5a3c5d828f8fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-003a0c4e61e0d192e",
            "default_route_table_id": "rtb-06c3339d7664e240d",
            "default_security_group_id": "sg-0702227b29e9eac2c",
            "dhcp_options_id": "dopt-0aef09a2c7b8f0428",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6a5a3c5d828f8fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c3339d7664e240d",
            "owner_id": "423623870709",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-main",
              "Owner": "Saikiran"
            },
            "tags_all": {
              "Name": "terraform-aws-main",
              "Owner": "Saikiran"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623870709",
            "id": "vpc-0f6a5a3c5d828f8fb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}